Additional unit tests
