# codegen/lib/apiclient/Models/Form.cs
@@ -9,33 +9,45 @@ namespace Graph.Community.Models
 {
     [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
     #pragma warning disable CS1591
-    public partial class TimeZoneInformation : IAdditionalDataHolder, IParsable
+    public partial class Form : IAdditionalDataHolder, IParsable
     #pragma warning restore CS1591
     {
         /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
         public IDictionary<string, object> AdditionalData { get; set; }
-        /// <summary>The Bias property</summary>
-        public int? Bias { get; set; }
-        /// <summary>The DaylightBias property</summary>
-        public int? DaylightBias { get; set; }
-        /// <summary>The StandardBias property</summary>
-        public int? StandardBias { get; set; }
+        /// <summary>Invalid = -1,DefaultView = 0,NormalView = 1,DialogView = 2,View = 3,DisplayForm = 4,DisplayFormDialog = 5,EditForm = 6,EditFormDialog = 7,NewForm = 8,NewFormDialog = 9,SolutionForm = 10,PAGE_MAXITEMS = 11</summary>
+        public int? FormType { get; set; }
+        /// <summary>The Id property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Id { get; set; }
+#nullable restore
+#else
+        public string Id { get; set; }
+#endif
+        /// <summary>The ServerRelativeUrl property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? ServerRelativeUrl { get; set; }
+#nullable restore
+#else
+        public string ServerRelativeUrl { get; set; }
+#endif
         /// <summary>
-        /// Instantiates a new <see cref="global::Graph.Community.Models.TimeZoneInformation"/> and sets the default values.
+        /// Instantiates a new <see cref="global::Graph.Community.Models.Form"/> and sets the default values.
         /// </summary>
-        public TimeZoneInformation()
+        public Form()
         {
             AdditionalData = new Dictionary<string, object>();
         }
         /// <summary>
         /// Creates a new instance of the appropriate class based on discriminator value
         /// </summary>
-        /// <returns>A <see cref="global::Graph.Community.Models.TimeZoneInformation"/></returns>
+        /// <returns>A <see cref="global::Graph.Community.Models.Form"/></returns>
         /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
-        public static global::Graph.Community.Models.TimeZoneInformation CreateFromDiscriminatorValue(IParseNode parseNode)
+        public static global::Graph.Community.Models.Form CreateFromDiscriminatorValue(IParseNode parseNode)
         {
             _ = parseNode ?? throw new ArgumentNullException(nameof(parseNode));
-            return new global::Graph.Community.Models.TimeZoneInformation();
+            return new global::Graph.Community.Models.Form();
         }
         /// <summary>
         /// The deserialization information for the current model
@@ -45,9 +57,9 @@ namespace Graph.Community.Models
         {
             return new Dictionary<string, Action<IParseNode>>
             {
-                { "Bias", n => { Bias = n.GetIntValue(); } },
-                { "DaylightBias", n => { DaylightBias = n.GetIntValue(); } },
-                { "StandardBias", n => { StandardBias = n.GetIntValue(); } },
+                { "FormType", n => { FormType = n.GetIntValue(); } },
+                { "Id", n => { Id = n.GetStringValue(); } },
+                { "ServerRelativeUrl", n => { ServerRelativeUrl = n.GetStringValue(); } },
             };
         }
         /// <summary>
@@ -57,9 +69,9 @@ namespace Graph.Community.Models
         public virtual void Serialize(ISerializationWriter writer)
         {
             _ = writer ?? throw new ArgumentNullException(nameof(writer));
-            writer.WriteIntValue("Bias", Bias);
-            writer.WriteIntValue("DaylightBias", DaylightBias);
-            writer.WriteIntValue("StandardBias", StandardBias);
+            writer.WriteIntValue("FormType", FormType);
+            writer.WriteStringValue("Id", Id);
+            writer.WriteStringValue("ServerRelativeUrl", ServerRelativeUrl);
             writer.WriteAdditionalData(AdditionalData);
         }
     }
