# codegen/openapi/graph.community.spinfo.json
@@ -34,6 +34,113 @@
         }
       }
     },
+    "/{serverRelativeSiteUrl}/_api/web/lists": {
+      "get": {
+        "tags": [
+          "Lists"
+        ],
+        "parameters": [
+          {
+            "name": "serverRelativeSiteUrl",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "$select",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "name": "$filter",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json; odata.metadata=minimal": {
+                "schema": {
+                  "$ref": "#/components/schemas/ListCollectionResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/{serverRelativeSiteUrl}/_api/web/lists(guid'{listId}')": {
+      "get": {
+        "tags": [
+          "Lists"
+        ],
+        "parameters": [
+          {
+            "name": "serverRelativeSiteUrl",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "listId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "$select",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "name": "$expand",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json; odata.metadata=minimal": {
+                "schema": {
+                  "$ref": "#/components/schemas/List"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/{serverRelativeSiteUrl}/_api/Microsoft.Sharepoint.Utilities.WebTemplateExtensions.SiteScriptUtility.GetSiteDesignMetadata": {
       "post": {
         "tags": [
@@ -171,10 +278,7 @@
             "content": {
               "application/json; odata.metadata=minimal": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/SitePage"
-                  }
+                  "$ref": "#/components/schemas/SitePage"
                 }
               }
             }
@@ -249,6 +353,43 @@
           0,
           1,
           2
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
+      "Form": {
+        "type": "object",
+        "properties": {
+          "Id": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
+          },
+          "FormType": {
+            "$ref": "#/components/schemas/FormType"
+          },
+          "ServerRelativeUrl": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": { }
+      },
+      "FormType": {
+        "enum": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          -1
         ],
         "type": "integer",
         "format": "int32"
@@ -381,6 +522,45 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/HubSite"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "List": {
+        "type": "object",
+        "properties": {
+          "Id": {
+            "type": "string",
+            "nullable": true
+          },
+          "Title": {
+            "type": "string",
+            "nullable": true
+          },
+          "BaseTemplate": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "Forms": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Form"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": { }
+      },
+      "ListCollectionResponse": {
+        "type": "object",
+        "properties": {
+          "value": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/List"
             },
             "nullable": true
           }
